# nu_plugin_hashes

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
src/: commands_generated.rs  hasher.rs  hashers_generated.rs  lib.rs  main.rs
src/hasher/: ascon.rs
