[package]
name = "nu_plugin_hashes"
version = "0.1.0"
edition = "2021"

[dependencies]
nu-cmd-base = "0.98.0"
nu-plugin = "0.98.0"
nu-protocol = "0.98.0"
digest = "0.10.7"
ascon-hash = "0.2.0"
belt-hash = "0.1.1"
blake2 = "0.10.6"
fsb = "0.1.3"
gost94 = "0.10.4"
groestl = "0.10.1"
jh = "0.1.0"
md2 = "0.10.2"
md4 = "0.10.2"
ripemd = "0.1.3"
sha1 = "0.10.6"
sha2 = "0.10.8"
sha3 = "0.10.8"
shabal = "0.4.1"
skein = "0.1.0"
sm3 = "0.4.2"
streebog = "0.10.2"
tiger = "0.2.1"
whirlpool = "0.10.4"

[build-dependencies]
digest = "0.10.7"
ascon-hash = "0.2.0"
belt-hash = "0.1.1"
blake2 = "0.10.6"
fsb = "0.1.3"
gost94 = "0.10.4"
groestl = "0.10.1"
jh = "0.1.0"
md2 = "0.10.2"
md4 = "0.10.2"
ripemd = "0.1.3"
sha1 = "0.10.6"
sha2 = "0.10.8"
sha3 = "0.10.8"
shabal = "0.4.1"
skein = "0.1.0"
sm3 = "0.4.2"
streebog = "0.10.2"
tiger = "0.2.1"
whirlpool = "0.10.4"

[profile.release]
strip = true
lto = true
codegen-units = 1
